250812 07:03 강버들 경로수정 진행

--- a/webapp/app/restaurant/restaurantDetail.html
+++ b/webapp/app/restaurant/restaurantDetail.html
@@ -52,7 +52,7 @@
         </div>
         <div class="detail_map_area">
           <div class="map_img_box">
-            <img class="map_img" src="/team04-RB_frontend/webapp/assets/img/restaurant/map.PNG">
+            <img class="map_img" src="./../../assets/img/restaurant/map.PNG">
           </div>
         </div>
       </div>
