--- a/webapp/header_admin.html
+++ b/webapp/header_admin.html
@@ -1,13 +1,13 @@
 <header id="site_header_login">
   <div>
     <span>
-      <a href="/team04-RB_frontend/webapp/app/admin/adminLogin.html">
-        <img src="/team04-RB_frontend/webapp/assets/img/main/logoP.png">
+      <a href="./app/admin/adminLogin.html">
+        <img src="./assets/img/main/logoP.png">
       </a>
       <div class="admin_text">· 관리자</div>
     </span>
     <span>
-      <a href="/team04-RB_frontend/webapp/app/admin/adminLogin.html">
+      <a href="./app/admin/adminLogin.html">
         로그아웃
       </a>
     </span>
