--- a/webapp/main.html
+++ b/webapp/main.html
@@ -8,9 +8,8 @@
   <link rel="stylesheet" href="./assets/css/header.css">
   <link rel="stylesheet" href="./assets/css/footer.css">
   <script defer src="./assets/js/main/main.js"></script>
-  <script defer src="./assets/js/main/include.js"></script>
+  <script defer src="./assets/js/main/includeMain.js"></script>
 
-  <link rel="stylesheet" href="./assets/css/modal.css">
 </head>
 <body>
   <div id="header"></div>
@@ -64,7 +63,7 @@
           </div>
           <ul class="board_list">
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -80,7 +79,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -96,7 +95,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -112,7 +111,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -137,7 +136,7 @@
         <div class="explore_care">
           <ul>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -172,7 +171,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -207,7 +206,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -242,7 +241,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
