--- a/webapp/main_test.html
+++ b/webapp/main_test.html
@@ -69,7 +69,7 @@
           </div>
           <ul class="board_list">
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -85,7 +85,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li>
-              <a href="/team04-RB_frontend/webapp/app/post/postDetail.html">
+              <a href="./app/post/postDetaillogin.html">
                 <span class="board_list_number">
                   1
                 </span>
@@ -142,7 +142,7 @@
         <div class="explore_care">
           <ul>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -212,7 +212,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
@@ -247,7 +247,7 @@
               </a>
             </li>
             <li>
-              <a href ="/team04-RB_frontend/webapp/app/careMember/careMember.html" class="care_profile">
+              <a href ="./app/careMember/careMemberDetail.html" class="care_profile">
                 <!-- 사진이랑 소개 -->
                 <div class="profile_info">
                   <div class="profile_pic_box">
