--- a/webapp/app/modal/modalAdminLoginFailed.html
+++ b/webapp/app/modal/modalAdminLoginFailed.html
@@ -2,7 +2,7 @@
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="modalAdminLoginFailedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalAdminLoginFailedNone()" class="modal_x" src="./../../assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         로그인에 실패했습니다.
