--- a/webapp/app/modal/modalDeleteNews.html
+++ b/webapp/app/modal/modalDeleteNews.html
@@ -2,7 +2,7 @@
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="modalDeleteNewsNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalDeleteNewsNone()" class="modal_x" src="./../../assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         이 뉴스를 삭제하시겠습니까?
