--- a/webapp/app/modal/modalQuestionAnswered.html
+++ b/webapp/app/modal/modalQuestionAnswered.html
@@ -2,7 +2,7 @@
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="modalQuestionAnsweredNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalQuestionAnsweredNone()" class="modal_x" src="./../../assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         문의하신 회원의 답변을 달았습니다.
