--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,15 +1,15 @@
 <header id="site_header_login">
   <div>
     <span>
-      <a href="/team04-RB_frontend/webapp/main.html">
-        <img src="/team04-RB_frontend/webapp/assets/img/main/logoP.png">
+      <a href="./main.html">
+        <img src="./assets/img/main/logoP.png">
       </a>
     </span>
     <span>
-      <a href="/team04-RB_frontend/webapp/app/myPageNormal/normalPwCheck.html">
+      <a href="./app/myPageNormal/normalPwCheck.html">
         마이페이지
       </a>
-      <a href="/team04-RB_frontend/webapp/main.html">
+      <a href="./main.html">
         로그아웃
       </a>
     </span>
@@ -18,42 +18,42 @@
     <ul>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/map/map.html">
+          <a href="./app/map/map.html">
             · 지도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/subwayLine/subway.html">
+          <a href="./app/subwayLine/subway.html">
             · 지하철 노선도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/restaurant/restaurant.html">
+          <a href="./app/restaurant/restaurant.html">
             · 음식점 리스트
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/news/news.html">
+          <a href="./app/news/news.html">
             · 뉴스 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/post/postMain.html">
+          <a href="./app/post/postMain.html">
             · 일반 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="/team04-RB_frontend/webapp/app/careMember/careMember.html">
+          <a href="./app/careMember/careMember.html">
             · 돌봄 회원 리스트
           </a>
         </div>
