--- a/webapp/header_main_login.html
+++ b/webapp/header_main_login.html
@@ -1,16 +1,16 @@
 <header id="site_header">
   <div>
     <span>
-      <a href="./../../app/main.html">
-        <img src="./../../assets/img/main/logoP.png">
+      <a href="./main.html">
+        <img src="./assets/img/main/logoP.png">
       </a>
     </span>
     <span>
-      <a href="./../../app/login/login.html">
-        로그인
+      <a href="./app/myPageCare/carePwCheck.html">
+        마이페이지
       </a>
-      <a href="./../../app/sign/terms.html">
-        회원가입
+      <a href="./main.html">
+        로그아웃
       </a>
     </span>
   </div>
@@ -18,42 +18,42 @@
     <ul>
       <li>
         <div>
-          <a href="./../../app/map/map.html">
+          <a href="./app/map/map.html">
             · 지도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/subwayLine/subway.html">
+          <a href="./app/subwayLine/subway.html">
             · 지하철 노선도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/restaurant/restaurant.html">
+          <a href="./app/restaurant/restaurant.html">
             · 음식점 리스트
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/news/news.html">
+          <a href="./app/news/news.html">
             · 뉴스 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/post/postMain.html">
+          <a href="./app/post/postMain.html">
             · 일반 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/careMember/careMember.html">
+          <a href="./app/careMember/careMember.html">
             · 돌봄 회원 리스트
           </a>
         </div>
