250812 08:19 장성주 세부 수정 완료

--- a/webapp/app/myPageCare/carePostDP.html
+++ b/webapp/app/myPageCare/carePostDP.html
@@ -60,7 +60,7 @@
       <p>정말로 게시글을 삭제하시겠습니까?</p>
       <form method="post" action="" class="modal_buttons">
       <a href="./carePost.html"><button type="submit" id="confirmDelete">확인</button></a>
-      <a id="cancelDelete" class="btn_cancel" href="./carePost.html"><button type="submit">취소</button></a>
+      <a href="./carePost.html"><button type="submit" id="cansleDelete">취소</button></a>
     </form>
     </div>
   </div>
