--- a/webapp/app/myPageCare/careReferenceDP.html
+++ b/webapp/app/myPageCare/careReferenceDP.html
@@ -48,7 +48,7 @@
       </div>
       <div class="buttons">
         <a class="btn_list" href="./careReference.html">목록</a>
-        <a class="btn_cancle" href="./careReferenceDP.html">취소</a>
+        <a class="btn_cancle" href="./careReference.html">취소</a>
         <button type="button" class="btn_compelete" id="saveBtn">등록</button>
       </div>
     </section>
