--- a/webapp/app/myPageNormal/normalheart.html
+++ b/webapp/app/myPageNormal/normalheart.html
@@ -13,6 +13,7 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 메뉴 사이드바 섹션 -->
     <nav class="main_sidebar">
       <ul>
         <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
@@ -28,14 +29,18 @@
       </ul>
     </nav>
     <form action="" method="get">
+      <!-- 메뉴 제목 -->
       <div class="div_mark">
         <div class="title">찜한 목록</div>
       </div>
+      <!-- 찜한 목록 섹션 -->
       <div class="context">
+        <!-- 3개씩 보여주는 목록 -->
         <div class="card_row">
           <ul id="card_list_1">
           </ul>
         </div>
+        <!-- 페이지네이션 -->
         <div id="pagenation">
           페이지네이션
         </div>
