250812 09:28 주석처리 진행중

--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -18,6 +18,8 @@
 
   </header>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -33,7 +35,11 @@
     </nav>
 
     <div class="div_mark">
+          <!-- 마이페이지 제목 -->
+
       <div class="title"> 매칭 기록 </div>
+      <!-- 페이지 월 분류 제목 -->
+
       <div class="matching_month">
         <ul class="months">
           <li class="month">1월</li>
