--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -30,7 +32,11 @@
     </nav>
 
     <div class="div_mark">
+          <!-- 마이페이지 제목 -->
+
       <div class="title">쪽지함</div>
+      <!-- 페이지 세부 정보 -->
+
       <nav class="div_choose">
         <ul>
           <li class="send"><a href="./careMessage.html"><strong>받은 쪽지</strong></a></li>
