--- a/webapp/app/myPageCare/carePointList.html
+++ b/webapp/app/myPageCare/carePointList.html
@@ -15,6 +15,8 @@
   <div id="header"></div>
 
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -31,8 +33,12 @@
 
     <section class="point-history">
       <div class="history-box">
+            <!-- 마이페이지 제목 -->
+<!-- 페이지 세부 정보 -->
+
         <div class="history-section">
           <h3>환급 내역</h3>
+          
           <div class="month-control">
             <button>&lt;</button>
             <span>8월</span>
@@ -54,7 +60,8 @@
             &lt; <span class="active">1</span> 2 3 4 ... &gt;
           </div>
         </div>
-
+ <!-- 마이페이지 제목 -->
+<!-- 페이지 세부 정보 -->
         <div class="history-section" id="takepoint">
           <h3>받은 포인트 내역</h3>
           <div class="month-control">
