--- a/webapp/app/myPageCare/carePointreturn.html
+++ b/webapp/app/myPageCare/carePointreturn.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -30,7 +32,10 @@
     </nav>
 
     <section class="return_section">
+          <!-- 마이페이지 제목 -->
+
       <h2>포인트 환급</h2>
+      <!-- 알림 정보 -->
 
       <div class="info_box">
         <ul>
@@ -39,6 +44,8 @@
           <li>메 아이 비 해~피 매일 웃고 싶어요~</li>
         </ul>
       </div>
+      <!-- 페이지 세부 정보 -->
+
       <div class="point_table_wrap">
         <div class="point_table">
           <div class="point_fixed"><label>보유 포인트</label></div>
