--- a/webapp/app/myPageCare/carePost.html
+++ b/webapp/app/myPageCare/carePost.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -31,7 +33,11 @@
 
 
       <div class="div_mark">
+            <!-- 마이페이지 제목 -->
+
         <div class="title">게시글 관리</div>
+        <!-- 페이지 세부 정보 -->
+
         <nav class="div_choose">
           <ul>
             <li>작성한 게시글 목록</li>
