--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -16,6 +16,8 @@
   <div id="header"></div>
 
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -31,7 +33,10 @@
     </nav>
 
     <div class="div_mark">
+          <!-- 마이페이지 제목 -->
+
       <div class="title">프로필 수정</div>
+<!-- 페이지 세부 정보 -->
 
       <div class="main_container">
         <ul class="profile_section">
