--- a/webapp/app/myPageCare/carePwCheck.html
+++ b/webapp/app/myPageCare/carePwCheck.html
@@ -14,6 +14,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
   <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -27,6 +29,8 @@
         <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
   </nav>
+  <!-- 페이지 세부 정보 -->
+
   <div class="pw_check">
     <form action="" method="get">
       비밀번호<input type="password" placeholder="비밀번호 8자리 입력">
