--- a/webapp/app/myPageCare/careReferenceDP.html
+++ b/webapp/app/myPageCare/careReferenceDP.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -29,11 +31,13 @@
       </ul>
     </nav>
 
+    <!-- 페이지 세부 정보 -->
     <section class="reference_dp">
       <div class="title">
         <input type="text">
 
       </div>
+
       <div class="reference_info">
         <span>등록자명 : 아무개</span>
         <span>등록일 : 2025-08-04</span><br>
@@ -41,7 +45,7 @@
       <div class="tools">
 
         <textarea name="" id=""></textarea>
-      
+
       </div>
       <div class="re_post_content">
         <textarea id="contentInput" placeholder="내용을 입력하세요"></textarea>
