--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+    <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -28,9 +30,10 @@
         <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
+    <!-- 마이페이지 제목 -->
     <section class="exit-section">
       <h2>회원 탈퇴</h2>
-
+      <!-- 알림 정보 -->
       <div class="exit-guide">
         <ul>
           <li>🛈 더 이상의 이용을 원하지 않는 불필요한 사이트의 대한 회원 탈퇴 처리</li>
@@ -38,7 +41,7 @@
           <li class="red">· 회원 탈퇴시 포인트가 남아있다면 소멸됩니다.</li>
         </ul>
       </div>
-
+<!-- 페이지 세부 정보 -->
       <div class="exit-box">
         <div class="exit-row">
           <div class="exit-label">탈퇴 날짜</div>
@@ -57,13 +60,13 @@
           </div>
         </div>
       </div>
-
+<!-- 드롭다운으로 표시할 것들 -->
       <div class="exit-button-area">
         <button class="exit-button" type="button">다음</button>
         <p id="reasonError" class="error-text">탈퇴사유를 꼭 입력해주세요</p>
       </div>
 
-
+<!-- 모달창 1번째로 뜨는 것 -->
       <div class="modal" id="modalConfirm" aria-hidden="true">
         <div class="modal-content">
           <p>정말로 회원 탈퇴를 진행하시겠습니까?<br><span class="red">※ 탈퇴는 되돌릴 수 없습니다.</span></p>
@@ -72,9 +75,9 @@
             <button class="btn blue" onclick="checkWithdrawal()">확인</button>
           </div>
         </div>
-        
-      </div>
 
+      </div>
+<!-- 회원 탈퇴 불가 이유 모달 -->
       <div class="modal" id="modalFail" aria-hidden="true">
         <div class="modal-content">
           <p>예약된 거동 불편자가 있어 회원 탈퇴가 불가합니다.</p>
@@ -84,7 +87,7 @@
           </div>
         </div>
       </div>
-
+<!-- 회원 탈퇴 성공 모달 -->
       <div class="modal" id="modalSuccess" aria-hidden="true">
         <div class="modal-content">
           <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
