--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -18,6 +18,8 @@
   <div id="header"></div>
 
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt=""></a></li>
@@ -33,8 +35,12 @@
     </nav>
 
     <form action="" method="get">
+          <!-- 마이페이지 제목 -->
+
       <div class="div_mark">
         <div class="title">찜한 목록</div>
+        <!-- 페이지 분류 제목 -->
+
         <nav class="mark_nav">
           <ul>
             <li><input type="checkbox"></li>
@@ -49,6 +55,7 @@
             </li>
           </ul>
         </nav>
+        <!-- 페이지 상세 내역 -->
         <nav class="mark_list"><a href="./../restaurant/restaurantDetail.html">
             <ul>
               <li><input type="checkbox"></li>
@@ -108,7 +115,7 @@
             </li>
           </ul>
         </nav>
-
+<!-- 페이지 이동 버튼 -->
         <nav class="page">
           <ul>
             <li><a href="">&lt;</a></li>
@@ -119,6 +126,7 @@
             <li><a href="">&gt;</a></li>
           </ul>
         </nav>
+        <!-- 찜 삭제 버튼 -->
         <div class="div_delete">
           <button type="button" id="btnDelete">찜 삭제</button>
         </div>
@@ -126,6 +134,7 @@
     </form>
 
   </main>
+  <!-- 삭제 버튼 클릭시 확인 모달 -->
     <div class="modal" id="deleteModal">
     <div class="modal_box">
       <p>찜한 가게를 삭제하시겠습니까?</p>
@@ -135,7 +144,7 @@
       </div>
     </div>
   </div>
-
+<!-- 찜 삭제확인 모달 확인 버튼 클릭시 모달 -->
   <div class="modal" id="chek_deleteModal">
     <div class="modal_box">
       <p>찜이 삭제 되었습니다.</p>
