--- a/webapp/app/myPageCare/careModify.html
+++ b/webapp/app/myPageCare/careModify.html
@@ -14,6 +14,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -29,11 +31,15 @@
     </nav>
 
     <div class="div_mark">
+          <!-- 마이페이지 제목 -->
+
       <div class="title">개인정보 수정</div>
       <div class="arlim">
         <div>
 
         </div>
+              <!-- 알림 정보 -->
+
         <nav>
           <ul>
             <li>저희 함께걸음은 회원님의 개인 정보를 신중히 취급하며, 회원님의 동의 없이 기재하신 회원정보를 공개하지 않습니다.</li>
@@ -42,6 +48,8 @@
           </ul>
         </nav>
       </div>
+      <!-- 페이지 세부 정보 -->
+
       <form action="" method="get">
         <div> 
           <div>회원 정보</div>
