--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -15,6 +15,8 @@
 <body>
   <div id="header"></div>
   <main>
+          <!-- 마이페이지 사이드 바 목록과 이동 경로 -->
+
     <nav class="main_sidebar">
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
@@ -30,6 +32,8 @@
     </nav>
 
     <div class="div_mark">
+          <!-- 마이페이지 제목 -->
+
       <div class="title">1 대 1 문의</div>
       <nav class="div_choose">
         <ul>
@@ -37,6 +41,8 @@
         </ul>
 
       </nav>
+      <!-- 페이지 세부 정보 -->
+
       <nav class="mark_nav">
         <ul>
             <li><input type="checkbox"></li>
