250812 10:01 김태현 html까지 주석 완료, 뉴스 내용 추가, 지도 내용 추가, 돌봄회원 리스트 a태그 삭제 등 수정

--- a/webapp/app/careMember/careMemberDetail.html
+++ b/webapp/app/careMember/careMemberDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,137 +14,191 @@
   <link rel="stylesheet" href="./../../assets/css/careMember/careMemberModal.css">
   <script defer src="./../../assets/js/careMember/careMemberModal.js"></script>
 </head>
+
 <body>
   <div id="header"></div>
   <main>
+    <!-- 돌봄회원 리스트 페이지 컨테이너  -->
     <div class="main_body">
+      <!-- 컨텍스트 -->
       <div class="context">
+        <!-- 프로필 정보 영역 -->
         <span class="profile_area">
+          <!-- 프로필 div박스 -->
           <div class="profile">
+            <!-- 프로필 픽 박스 -->
             <div class="profile_pic_box">
+              <!-- 프로필 사진 -->
               <img class="profile_pic" src="./../../assets/img/careMember/profilePicCare.png">
-            <div class="profile_intro">
-              <div class="profile_name">
-                김괭이
+              <!-- 프로필 정보 칸 -->
+              <div class="profile_intro">
+                <!-- 프로필 이름 -->
+                <div class="profile_name">
+                  김괭이
+                </div>
+                <!-- 프로필 날짜 -->
+                <div class="profile_day_row">
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                  <!-- 날짜 -->
+                  <div class="day">
+                    화
+                  </div>
+                </div>
+                <!-- 프로필 이력 -->
+                <div class="profile_info">
+                  정보(이력) :
+                  <ul>
+                    <!-- 프로필 이력 정보 리스트 -->
+                    <li>
+                      · 장애인 활동사 교육 이수 완료
+                    </li>
+                    <!-- 프로필 이력 정보 리스트 -->
+                    <li>
+                      · 서울 거주
+                    </li>
+                  </ul>
+                </div>
+                <!-- 프로필 간단 소개 -->
+                <div class="profile_short_intro">
+                  소개 :
+                  <div>
+                    · 재빠른 활동사!!! 김괭이!!
+                  </div>
+                </div>
               </div>
-              <div class="profile_day_row">
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-                <div class="day">
-                  화
-                </div>
-              </div>
-              <div class="profile_info">
-                정보(이력) : 
-                <ul>
-                  <li>
-                    · 장애인 활동사 교육 이수 완료
-                  </li>
-                  <li>
-                    · 서울 거주
-                  </li>
-                </ul>
-              </div>
-              <div class="profile_short_intro">
-                소개 : 
-                <div>
-                  · 재빠른 활동사!!! 김괭이!!
-                </div>
-              </div>
-            </div>
             </div>
           </div>
+          <!-- 쪽지 보내기 박스 -->
           <div id="send_button_box">
+            <!-- 쪽지 보내기 버튼 -->
             <button onclick="confirmShowup()" id="send_button">
               쪽지 보내기
             </button>
           </div>
         </span>
+        <!-- 후기 영역 -->
         <span class="comments_area">
+          <!-- 후기 패널 박스 -->
           <div class="comment_pannel">
+            <!-- 후기 분류 제목 -->
             <div class="comment_column">
+              <!-- 후기 순번 분류 -->
               <div class="comment_number_column">
                 순번
               </div>
+              <!-- 후기 작성자 분류 -->
               <div class="comment_author_column">
                 작성자
               </div>
+              <!-- 후기 제목 분류 -->
               <div class="comment_context_column">
                 제목
               </div>
+              <!-- 후기 날짜 분류 -->
               <div class="comment_date_column">
                 날짜
               </div>
             </div>
+            <!-- 후기 리스트 ul -->
             <ul class="comment_list">
+              <!-- 후기 리스트 li -->
               <li class="comment">
-                <a href="./../post/postDetail.html">
-                  <div class="comment_number">
-                    1
-                  </div><div class="comment_author">
-                    아무개
-                  </div><div class="comment_context">
-                    나중에 또 부탁드립니다.
-                  </div><div class="comment_date">
-                    2025-08-02
-                  </div></a>
-              </li>
-              <li class="comment">
-                <a>
+                <div>
+                  <!-- 후기 리스트 순번 -->
                   <div class="comment_number">
                     1
                   </div>
+                  <!-- 후기 리스트 작성자 -->
                   <div class="comment_author">
                     아무개
                   </div>
+                  <!-- 후기 리스트 내용 -->
                   <div class="comment_context">
                     나중에 또 부탁드립니다.
                   </div>
+                  <!-- 후기 리스트 날짜 -->
                   <div class="comment_date">
                     2025-08-02
                   </div>
-                </a>
+                </div>
               </li>
+              <!-- 후기 리스트 li -->
               <li class="comment">
-                <a>
+                <div>
+                  <!-- 후기 리스트 순번 -->
                   <div class="comment_number">
                     1
                   </div>
+                  <!-- 후기 리스트 작성자 -->
                   <div class="comment_author">
                     아무개
                   </div>
+                  <!-- 후기 리스트 내용 -->
                   <div class="comment_context">
                     나중에 또 부탁드립니다.
                   </div>
+                  <!-- 후기 리스트 날짜 -->
                   <div class="comment_date">
                     2025-08-02
                   </div>
-                </a>
+                </div>
+              </li>
+              <!-- 후기 리스트 li -->
+              <li class="comment">
+                <div>
+                  <!-- 후기 리스트 순번 -->
+                  <div class="comment_number">
+                    1
+                  </div>
+                  <!-- 후기 리스트 작성자 -->
+                  <div class="comment_author">
+                    아무개
+                  </div>
+                  <!-- 후기 리스트 내용 -->
+                  <div class="comment_context">
+                    나중에 또 부탁드립니다.
+                  </div>
+                  <!-- 후기 리스트 날짜 -->
+                  <div class="comment_date">
+                    2025-08-02
+                  </div>
+                </div>
               </li>
             </ul>
+            <!-- 후기 작성 박스 -->
             <div class="input_box">
+              <!-- 후기 입력 창 -->
               <input type="text" id="comment_text" placeholder="후기를 작성하세요">
+              <!-- 후기 작성 버튼 -->
               <button onclick="writeComment()" id="comment_button">작성</button>
             </div>
           </div>
+          <!-- 페이지 네이션 -->
           <div id="comment_pagenation">
-            페이지네이션
+            &lt; <span class="active">1</span> 2 3 4 ... &gt;
           </div>
         </span>
       </div>
@@ -152,4 +207,5 @@
   <div id="footer"></div>
   <div id="modal"></div>
 </body>
-</html> 
+
+</html>
