--- a/webapp/app/map/map.html
+++ b/webapp/app/map/map.html
@@ -30,22 +30,26 @@
             <!-- 정보 내용 ul -->
             <ul class="info_content">
               <!-- 지역 제목 -->
-              <li class="info_title"></li>
+              <li class="info_title">오다리집 간장게장</li>
               <!-- 지역 주소 -->
-              <li class="info_address"></li>
+              <li class="info_address">서울 강남구 논현로 94길 7 2층</li>
               <!-- 오픈 시간 -->
-              <li class="info_times"></li>
+              <li class="info_times">01:30에 라스트 오더
+                매일 : 09:20 ~ 02:00
+                01:30 라스트 오더</li>
               <!-- 장소 전화번호 -->
-              <li class="info_phonenum"></li>
+              <li class="info_phonenum">0507-1350-6769</li>
               <!-- 장소 상세(인터넷 유무, 배달 유무 등등...) -->
-              <li class="info_detail"></li>
+              <li class="info_detail">배달, 포장, 무선 인터넷,
+                반려동물, 동반</li>
             </ul>
           </div>
           <!-- 찜 버튼 -->
           <div class="wishbtn">찜버튼</div>
         </div>
         <!-- 장소 상세설명 -->
-        <div class="map_detail"></div>
+        <div class="map_detail">2021 GURUNAVI JAPAN 세계100대 레스토랑 오다리집 명동본점 선정 트립어드바이저 3년연속 서울 최우수식당 선정 L,XL 사이즈 1마리 생산지의
+          원가가 약 16000~25000 입니다 . 전국최저가격 최고 컬리티로 판매하고 있습니다.간장게장 매니아님들은 저희 ...</div>
       </div>
     </div>
   </main>
