--- a/webapp/app/careMember/careMember.html
+++ b/webapp/app/careMember/careMember.html
@@ -40,7 +40,7 @@
           <img id="search_icon" src="./../../assets/img/careMember/search_icon.png">
         </div>
       </div>
-      <!-- 카드 리스트 컨테이너 -->
+      <!-- 카드 리스트 컨텍스트 -->
       <div class="context">
         <!-- 카드 행 1 -->
         <div class="card_row">
