250812 10:22 장성주 오류 수정

--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -69,9 +69,9 @@
                 <div>02)1234-5678</div>
               </li>
             </ul>
-
           </a>
         </nav>
+        <!-- 페이지 상세 내역 2 -->
         <nav class="mark_list"><a href="./../restaurant/restaurantDetail.html">
           <ul>
             <li><input type="checkbox"></li>
@@ -87,6 +87,7 @@
           </ul>
         </a>
         </nav>
+        <!-- 페이지 상세 내역 3  -->
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
