--- a/webapp/app/myPageCare/careMatching.html
+++ b/webapp/app/myPageCare/careMatching.html
@@ -55,6 +55,7 @@
           <li class="month">11월</li>
           <li class="month">12월</li>
         </ul>
+        <!-- 매칭 페이지 원래 넣었던 값 (js 넣어서 이건 안나와요) -->
         <ul class="matching_list">
           <li class="matching">
             <div class="matching_day">
@@ -75,6 +76,7 @@
           </li>
         </ul>
       </div>
+      <!-- 페이지네이션 -->
       <nav class="page">
         <ul>
           <li><a href="">&lt;</a></li>
@@ -86,6 +88,7 @@
         </ul>
 
       </nav>
+      <!-- 추가 버튼 클릭시 하단에 있는 모달창 출력 -->
       <div class="div_add">
         <button>추가</button>
       </div>
@@ -94,7 +97,7 @@
   <footer>
 
   </footer>
-
+<!-- 추가 버튼을 클릭 시 아래의 모달 생성 -->
   <div class="modal" id="matching_add">
     <div class="modal_container">
       <h2> 매칭 추가 </h2>
@@ -110,6 +113,7 @@
       </form>
     </div>
   </div>
+  <!-- 매칭 추가 등록 버튼 클릭 시 나오는 모달 -->
   <div class="modal" id="complete_modal">
     <div class="modal_container">
       <p>매칭 정보가 등록되었습니다</p>
