--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -35,7 +35,7 @@
           <!-- 마이페이지 제목 -->
 
       <div class="title">쪽지함</div>
-      <!-- 페이지 세부 정보 -->
+      <!-- 페이지 받은 쪽지 보낸 쪽지 클릭 가능 -->
 
       <nav class="div_choose">
         <ul>
@@ -45,6 +45,7 @@
         </ul>
 
       </nav>
+      <!-- 페이지 분류 제목 -->
       <nav class="mark_nav">
         <ul>
           <li><input type="checkbox"></li>
@@ -62,7 +63,7 @@
           </li>
         </ul>
       </nav>
-
+<!-- 쪽지 게시글 상세 페이지  -->
       <nav class="mark_list">
         <ul>
           <li><input type="checkbox"></li>
@@ -80,6 +81,8 @@
             </a></li>
         </ul>
       </nav>
+      <!-- 쪽지 게시글 상세 페이지  -->
+
       <nav class="mark_list">
         <ul>
           <li><input type="checkbox"></li>
@@ -97,6 +100,8 @@
             </a></li>
         </ul>
       </nav>
+      <!-- 쪽지 게시글 상세 페이지  -->
+
       <nav class="mark_list">
         <ul>
           <li><input type="checkbox"></li>
@@ -114,6 +119,8 @@
             </a></li>
         </ul>
       </nav>
+      <!-- 쪽지 게시글 상세 페이지  -->
+
       <nav class="mark_list">
         <ul>
           <li><input type="checkbox"></li>
@@ -131,6 +138,7 @@
             </a></li>
         </ul>
       </nav>
+      <!-- 페이지 네이션  -->
       <nav class="page">
         <ul>
           <li>&lt;</li>
@@ -142,12 +150,13 @@
         </ul>
 
       </nav>
+      <!-- 삭제 버튼 클릭 시 쪽지 삭제 -->
       <div class="div_delete">
         <button class="btn_list_delete">삭제</button>
       </div>
     </div>
   </main>
-
+<!-- 쪽지 row 클릭시 나오는 모달창 -->
   <div class="modal_bg" id="msgModal">
     <div class="modal_box">
       <div class="modal_read">
@@ -162,13 +171,14 @@
           나는나는 육식 공룡 풀떼기는 안먹지
         </div>
       </div>
+      <!-- 해당 모달에 있는 모달창 -->
       <div class="modal_button">
         <button class="btn_reply">답장</button>
         <button class="btn_delete">삭제</button>
       </div>
     </div>
   </div>
-
+<!--  -->
   <div class="modal_bg" id="sendMsgModal">
     <div class="modal_box">
       <div class="modal_read">
@@ -226,8 +236,6 @@
 
 
   <div id="footer"></div>
-
-
 
 </body>
 
