250812 10:31 강버들 음식점 모달 작업 중

--- a/webapp/main.html
+++ b/webapp/main.html
@@ -46,12 +46,12 @@
           </div>
           <ul class="recommend_activiies">
             <li>
-              <a href="dummy.html">
+              <a href="https://www.sac.or.kr/site/main/home">
                 예술의 전당
               </a>
             </li>
             <li>
-              <a href="dummy.html">
+              <a href="https://www.gugak.go.kr/site/main/index001">
                 국립국악원
               </a>
             </li>
