--- a/webapp/app/login/findPassword.html
+++ b/webapp/app/login/findPassword.html
@@ -77,7 +77,7 @@
                 </div>
               </div>
               <div class="box_next">
-                <button>다음</button>
+                <button class="next_btn" onclick="nextPg()" type="button">다음</button>
               </div>
             </div>
           </div>
