--- a/webapp/header_login.html
+++ b/webapp/header_login.html
@@ -1,7 +1,7 @@
 <header id="site_header_login">
   <div>
     <span>
-      <a href="./main.html">
+      <a href="./../main.html">
         <img src="./assets/img/main/logoP.png">
       </a>
     </span>
