--- a/webapp/app/admin/notice.html
+++ b/webapp/app/admin/notice.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/notice.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/modal/modalDeleteNotice.js"></script>
-    <script defer src="./../../assets/js/admin/notice.js"></script>
+    <script defer src="./../../assets/js/main/include.js"></script>
+    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <!-- <script defer src="./../../assets/js/admin/notice.js"></script> -->
     <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
   </head>
 
