--- a/webapp/app/myPageCare/carePointList.html
+++ b/webapp/app/myPageCare/carePointList.html
@@ -83,6 +83,7 @@
               <span>2025-08-02</span>
             </div>
           </div>
+          <!-- 페이지 네이션 -->
           <div class="pagination">
             &lt; <span class="active">1</span> 2 3 4 ... &gt;
           </div>
