--- a/webapp/app/myPageCare/carePointreturn.html
+++ b/webapp/app/myPageCare/carePointreturn.html
@@ -51,7 +51,7 @@
           <div class="point_fixed"><label>보유 포인트</label></div>
           <div class="point_row"><span>38,960 P</span></div>
         </div>
-
+<!-- 신청 포인트 환급하기 위한 칸 -->
         <div class="point_table">
           <div class="point_fixed"><label for="input_point">신청 포인트</label></div>
           <div class="point_row">
