--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -178,7 +178,7 @@
       </div>
     </div>
   </div>
-<!--  -->
+<!-- 답장 버튼 클릭 시 모달 출력 -->
   <div class="modal_bg" id="sendMsgModal">
     <div class="modal_box">
       <div class="modal_read">
@@ -197,7 +197,7 @@
       </div>
     </div>
   </div>
-
+<!-- 보내기 버튼 클릭 시 모달 출력 -->
   <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지를 보냈습니다.</p>
@@ -206,7 +206,7 @@
       </div>
     </div>
   </div>
-
+<!-- 삭제 버튼 클릭 시 모달 출력 -->
   <div class="modal_bg" id="deleteMsgModal">
     <div class="modal_box confirm_modal">
       <p class="confirm_text">정말로 쪽지를 삭제하시겠습니까?</p>
@@ -216,7 +216,7 @@
       </div>
     </div>
   </div>
-
+<!-- 삭제 모달에서 확인 클릭시 모달 출력 -->
   <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지가 삭제되었습니다.</p>
@@ -225,6 +225,7 @@
       </div>
     </div>
   </div>
+  <!-- 보낸 쪽지 페이지에서 사용하는 모달 -->
   <div class="modal_bg" id="sentMsgReadModal">
     <div class="modal_box read_modal">
       <div class="modal_header">
