250812 10:47 강버들 작업내용 백업

--- a/webapp/header.html
+++ b/webapp/header.html
@@ -1,7 +1,7 @@
 <header id="site_header">
   <div>
     <span>
-      <a href="./../../app/main.html">
+      <a href="./../../main.html">
         <img src="./../../assets/img/main/logoP.png">
       </a>
     </span>
