250812 11:33 강버들 경로 수정

--- a/webapp/app/restaurant/restaurant.html
+++ b/webapp/app/restaurant/restaurant.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="header"></div>
-  <div onclick="modalCareModifyRejectedShow()" style="background-color: orange; height: 50px;">테스트버튼</div>
+  <div onclick="restaurantModalLoginShow()" style="background-color: orange; height: 50px;">테스트버튼</div>
   <main>
     <div class="main_body">
       <p class="page_title">
@@ -71,6 +71,6 @@
     </div>
   </main>
   <div id="footer"></div>
-  <div id="modalCareModifyRejected"></div>
+  <div id="restaurantModalLogin"></div>
 </body>
 </html> 
