--- a/webapp/header.html
+++ b/webapp/header.html
@@ -6,10 +6,10 @@
       </a>
     </span>
     <span>
-      <a href="./../../app/login/login.html">
+      <a href="./../login/login.html">
         로그인
       </a>
-      <a href="./../../app/sign/terms.html">
+      <a href="./../sign/terms.html">
         회원가입
       </a>
     </span>
@@ -18,42 +18,42 @@
     <ul>
       <li>
         <div>
-          <a href="./../../app/map/map.html">
+          <a href="./../map/map.html">
             · 지도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/subwayLine/subway.html">
+          <a href="./../subwayLine/subway.html">
             · 지하철 노선도
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/restaurant/restaurant.html">
+          <a href="./../restaurant/restaurant.html">
             · 음식점 리스트
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/news/news.html">
+          <a href="./../news/news.html">
             · 뉴스 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/post/postMain.html">
+          <a href="./../post/postMain.html">
             · 일반 게시판
           </a>
         </div>
       </li>
       <li>
         <div>
-          <a href="./../../app/careMember/careMember.html">
+          <a href="./../careMember/careMember.html">
             · 돌봄 회원 리스트
           </a>
         </div>
