--- a/webapp/app/login/findId.html
+++ b/webapp/app/login/findId.html
@@ -61,7 +61,7 @@
                     id="author_number"
                   />
                   <div class="timer"></div>
-                  <button onclick="checkMsg()">인증번호 확인</button>
+                  <button onclick="checkMsg()" type="button">인증번호 확인</button>
                 </div>
                 <div class="error_box_msg">
                   <p class="error_msg">인증번호가 올바르지 않습니다.</p>
